# stm32g4xx-project

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/src/: crc_hw.rs  error.rs  flash.rs  jump.rs  main.rs
firmware/: Cargo.toml  build.rs
firmware/src/: main.rs
nucleo-g4xx-bootloader/: .clangd  .mxproject  CMakeLists.txt  STM32G474XX_FLASH.ld.S  nucleo-g4xx-bootloader.ioc
nucleo-g4xx-bootloader/Core/Inc/: bootloader.h  first_boot.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_nucleo_conf.h  workflow.h
nucleo-g4xx-bootloader/Core/Src/: bootloader.c  first_boot.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  system_stm32g4xx.c
nucleo-g4xx-bootloader/cmake/: extract_public_key.cmake
nucleo-g4xx-bootloader/cmake/stm32cubemx/: CMakeLists.txt
nucleo-g4xx-firmware/: .mxproject  CMakeLists.txt  STM32G474XX_FLASH.ld.S  nucleo-g4xx-firmware.ioc
nucleo-g4xx-firmware/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
nucleo-g4xx-firmware/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  sysmem.c
nucleo-g4xx-firmware/cmake/: sign_firmware.cmake
scripts/: build_image.py  verify_image.py
secrets/keys/: public_key.pem  test
shared/: Cargo.toml  fw_header.h  memory_map.h
shared/Inc/: constants.h  debug_print.h  fw_header.h  helpers.h  memory_map.h
shared/Src/: fw_header.c  helpers.c
shared/src/: crc.rs  fw_header.rs  lib.rs  memory_map.rs
(+81 files in other folders)
